--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title></title>
-      <meta name="robots" content="noindex">
+      <!-- <meta name="robots" content="noindex"> -->
 </head>
 <body>
-      
+      p
 </body>
 </html>
