--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title></title>
-      <!-- <meta name="robots" content="noindex"> -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sample Page</title>
+  <meta name="description" content="This is a sample webpage with placeholder content.">
 </head>
 <body>
-      p
+  <h1>Welcome to My Sample Page</h1>
+  <p>This is a placeholder page created for testing search engine indexing.</p>
+  <p>It contains some sample text and structure to avoid being marked as a soft 404.</p>
 </body>
 </html>
